kubernetes/实践/gitlab-storage.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gitlab
