kubernetes/实践/gitlab-deploy.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitlab-svc
  namespace: gitlab
spec:
  type: NodePort
  ports:
    - name: http
      port: 80
      targetPort: 80
      nodePort: 32080
    - name: ssh
      port: 22
      targetPort: 22
      nodePort: 32022
  selector:
    app: gitlab
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitlab-deploy
  namespace: gitlab
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gitlab
  template:
    metadata:
      labels:
        app: gitlab
    spec:
      containers:
      - name: gitlab
        image: gitlab/gitlab-ce:18.6.5-ce.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
        - containerPort: 443
        - containerPort: 22
        # 资源请求与限制
        resources:
          requests:
            memory: "2Gi"
            cpu: "100m"
          limits:
            memory: "4Gi"
        # 环境变量配置
        volumeMounts:
        - name: gitlab-conf
          mountPath: /etc/gitlab
        - name: gitlab-data
          mountPath: /var/opt/gitlab
        - name: gitlab-logs
          mountPath: /var/log/gitlab
        # 健康检查
        livenessProbe:
          httpGet:
            path: /-/health
            port: 80
          initialDelaySeconds: 120 # 首次启动很慢，给足时间
          periodSeconds: 20
        readinessProbe:
          httpGet:
            path: /-/health
            port: 80
          initialDelaySeconds: 60
          periodSeconds: 10
      volumes:
      - name: gitlab-conf
        persistentVolumeClaim:
          claimName: gitlab-conf-pvc
      - name: gitlab-data
        persistentVolumeClaim:
          claimName: gitlab-data-pvc
      - name: gitlab-logs
        persistentVolumeClaim:
          claimName: gitlab-logs-pvc
